--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^18.1.0",
     "react-loader-spinner": "^6.0.0-0"
   },
   "devDependencies": {
